<resources>
    <string name="MT_Bin">Navigate home</string>
    <string name="dev_credit">By IWXSC | Telegram: @Kz.tutorial</string>
    <string name="string_7f110001">Navigate up</string>
    <string name="string_7f110002">More options</string>
    <string name="string_7f110003">Done</string>
    <string name="string_7f110004">See all</string>
    <string name="string_7f110005">Choose an app</string>
    <string name="string_7f110006">OFF</string>
    <string name="string_7f110007">ON</string>
    <string name="string_7f110008">Alt+</string>
    <string name="string_7f110009">Ctrl+</string>
    <string name="string_7f11000a">delete</string>
    <string name="string_7f11000b">enter</string>
    <string name="string_7f11000c">Function+</string>
    <string name="string_7f11000d">Meta+</string>
    <string name="string_7f11000e">Shift+</string>
    <string name="string_7f11000f">space</string>
    <string name="string_7f110010">Sym+</string>
    <string name="string_7f110011">Menu+</string>
    <string name="string_7f110012">Search…</string>
    <string name="string_7f110013">Clear query</string>
    <string name="string_7f110014">Search query</string>
    <string name="string_7f110015">Search</string>
    <string name="string_7f110016">Submit query</string>
    <string name="string_7f110017">Voice search</string>
    <string name="string_7f110018">Share with</string>
    <string name="string_7f110019">Share with %s</string>
    <string name="string_7f11001a">Collapse</string>
    <string name="string_7f11001b">dualspace.multspace.account</string>
    <string name="string_7f11001c">ad</string>
    <string name="string_7f11001d">Add account</string>
    <string name="string_7f11001e">No more than %d apps can be cloned at a time</string>
    <string name="string_7f11001f">Please select at least one app</string>
    <string name="string_7f110020">Other Apps</string>
    <string name="string_7f110021">Recommend</string>
    <string name="string_7f110022">Add to LIXynSo GSpace</string>
    <string name="string_7f110023">Add app here</string>
    <string name="string_7f110024">Advanced mode</string>
    <string name="string_7f110025">Enable subtitles</string>
    <string name="string_7f110026">Disable subtitles</string>
    <string name="string_7f110027">%1$.2fx</string>
    <string name="string_7f110028">Fast forward</string>
    <string name="string_7f110029">Enter fullscreen</string>
    <string name="string_7f11002a">Exit fullscreen</string>
    <string name="string_7f11002b">Hide player controls</string>
    <string name="string_7f11002c">Next</string>
    <string name="string_7f11002d">Hide additional settings</string>
    <string name="string_7f11002e">Show additional settings</string>
    <string name="string_7f11002f">Pause</string>
    <string name="string_7f110030">Play</string>
    <string name="string_7f110031">Speed</string>
    <string name="string_7f110032">Normal</string>
    <string name="string_7f110033">Previous</string>
    <string name="string_7f110034">Repeat all</string>
    <string name="string_7f110035">Repeat none</string>
    <string name="string_7f110036">Repeat one</string>
    <string name="string_7f110037">Rewind</string>
    <string name="string_7f110038">Playback progress</string>
    <string name="string_7f110039">Settings</string>
    <string name="string_7f11003a">Show player controls</string>
    <string name="string_7f11003b">Shuffle off</string>
    <string name="string_7f11003c">Shuffle on</string>
    <string name="string_7f11003d">Stop</string>
    <string name="string_7f11003e">00:00:00</string>
    <string name="string_7f11003f">VR mode</string>
    <string name="string_7f110040">Download completed</string>
    <string name="string_7f110041">Download</string>
    <string name="string_7f110042">Downloading</string>
    <string name="string_7f110043">Download failed</string>
    <string name="string_7f110044">Downloads</string>
    <string name="string_7f110045">Downloads paused</string>
    <string name="string_7f110046">Downloads waiting for network</string>
    <string name="string_7f110047">Downloads waiting for WiFi</string>
    <string name="string_7f110048">Removing downloads</string>
    <string name="string_7f110049">%1$s, %2$s</string>
    <string name="string_7f11004a">%1$.2f Mbps</string>
    <string name="string_7f11004b">Mono</string>
    <string name="string_7f11004c">%1$d × %2$d</string>
    <string name="string_7f11004d">Alternate</string>
    <string name="string_7f11004e">CC</string>
    <string name="string_7f11004f">Commentary</string>
    <string name="string_7f110050">Supplementary</string>
    <string name="string_7f110051">Auto</string>
    <string name="string_7f110052">None</string>
    <string name="string_7f110053">Audio</string>
    <string name="string_7f110054">Text</string>
    <string name="string_7f110055">Video</string>
    <string name="string_7f110056">Stereo</string>
    <string name="string_7f110057">Surround sound</string>
    <string name="string_7f110058">5.1 surround sound</string>
    <string name="string_7f110059">7.1 surround sound</string>
    <string name="string_7f11005a">Unknown</string>
    <string name="string_7f11005b">Before you clone the application, all files access permission must be enabled, As we will be cloning both the application and the data. This is the only way we can ensure that the cloned application works properly. We neither collect nor share your data with other organizations!</string>
    <string name="string_7f11005c">Allow Permission</string>
    <string name="string_7f11005d">and</string>
    <string name="string_7f11005e">androidx.startup</string>
    <string name="string_7f11005f">%s has been deleted</string>
    <string name="string_7f110060">The %s clone failed</string>
    <string name="string_7f110061">Cloning %s</string>
    <string name="string_7f110062">12fwl6pGm7PmKjFpP82im502KN8lVRU2J+rAH/qyu4TOTo4KGDJj4Y6kKOzlTGCaZYgXMlbWMZYV9TnvaKb08Wod0rsobMgrMfNFSDOKl705Yd56507dtfwk4MjF9xPewtbGyha6O</string>
    <string name="string_7f110063">B4nkQVp5sZn3E7nbJiNdOq8ikq1J0w_v_mskql31zJAmeMGTSmMDGT2Z2ZkTlek4vFSsmsi60d53qFocnwJ6V0</string>
    <string name="string_7f110064">LIXynSo GSpace</string>
    <string name="string_7f110065">Opening %s</string>
    <string name="string_7f110066">The %s failed to open</string>
    <string name="string_7f110067">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="string_7f110068">No recently displayed ads found.</string>
    <string name="applovin_id">p2IGUfNUvTbuVh_b8m1bT6ZCE8z3toQkKWU3uGVGwThOTCCBQQeJMlmEFrGFIgX2iGi3BXJDuGvu4sN_lSLarC</string>
    <string name="string_7f11006a">Displays more info about the list item.</string>
    <string name="string_7f11006b">There are popular apps recommend for you</string>
    <string name="string_7f11006c">Basic mode</string>
    <string name="string_7f11006d">Buy failed</string>
    <string name="string_7f11006e">Buy succeeded</string>
    <string name="string_7f11006f">getAppName</string>
    <string name="string_7f110070">getIconUrl</string>
    <string name="string_7f110071">getImageUrl</string>
    <string name="string_7f110072">Cancel</string>
    <string name="string_7f110073">Choose</string>
    <string name="string_7f110074">Easy Clean</string>
    <string name="string_7f110075">Cloning</string>
    <string name="string_7f110076">Enable</string>
    <string name="string_7f110077">"%1$s won't work unless you enable Google Play services."</string>
    <string name="string_7f110078">Enable Google Play services</string>
    <string name="string_7f110079">Install</string>
    <string name="string_7f11007a">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="string_7f11007b">Get Google Play services</string>
    <string name="string_7f11007c">Google Play services availability</string>
    <string name="string_7f11007d">Google Play services error</string>
    <string name="string_7f11007e">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="string_7f11007f">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="string_7f110080">Update</string>
    <string name="string_7f110081">"%1$s won't run unless you update Google Play services."</string>
    <string name="string_7f110082">Update Google Play services</string>
    <string name="string_7f110083">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="string_7f110084">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="string_7f110085">Open on phone</string>
    <string name="string_7f110086">Sign in</string>
    <string name="string_7f110087">Sign in with Google</string>
    <string name="string_7f110088">CONFIRM</string>
    <string name="string_7f110089">Confirm you want to exit Whats Web</string>
    <string name="string_7f11008a">Same as WA UI, may not work properly when WA Web updated.</string>
    <string name="string_7f11008b">已成功复制到剪贴板</string>
    <string name="string_7f11008c">Link copied to clipboard</string>
    <string name="string_7f11008d">Create Now</string>
    <string name="string_7f11008e">The shortcut has created successfully</string>
    <string name="string_7f11008f">Create Shortcut</string>
    <string name="string_7f110090">Create shortcut of cleaning icon, then you can clean the phone junk files anytime with just one tap.</string>
    <string name="string_7f110091">%1$s天前</string>
    <string name="string_7f110092">default</string>
    <string name="string_7f110093">CANCEL</string>
    <string name="string_7f110094">CLONE</string>
    <string name="string_7f110095">Disagree and exit</string>
    <string name="string_7f1100ae">Feedback</string>
    <string name="string_7f1100af">Enter contact information</string>
    <string name="string_7f1100b0">Please leave your e-mail or Skype account for us to better serve you:</string>
    <string name="string_7f1100b5">You can also follow us on Facebook:</string>
    <string name="string_7f1100b6">Please describe your problems as many details as possible, so that we could fix it for you in time</string>
    <string name="string_7f1100b9">Submit</string>
    <string name="string_7f1100ba">Sending feedback</string>
    <string name="string_7f1100bf">START 3-DAY FREE TRIAL</string>
    <string name="string_7f1100c2">Setting</string>
    <string name="string_7f1100d5">LIXynSo GSpace</string>
    <string name="string_7f110108">"Please permit LIXynSo GSpace to acquire permissions.
Otherwise, you will not be able to use cloned apps normally."</string>
    <string name="string_7f110109">Permit Permissions</string>
    <string name="string_7f11010e">Privacy Policy</string>
    <string name="string_7f110111">Refuse</string>
    <string name="string_7f110127">START</string>
    <string name="string_7f11012f">Terms of Service</string>
    <string name="string_7f110135">Try Now</string>
    <string name="string_7f1101c3">TURN ON</string>
    <string name="string_7f1101c9">By proceeding, you agree to the</string>
    <string name="string_7f1101cd">Instant message</string>
    <string name="string_7f1101cf">More stable</string>
    <string name="string_7f1101d0">Multiple accounts</string>
    <string name="string_7f1101d1">Remove ads</string>
    <string name="string_7f1101d3">VIP Privilege</string>
    <string name="string_7f1101d5">"Once deleted, all the datas of this app will be deleted together.
Confirm to delete?"</string>
    <string name="string_7f1101d6">WARNING</string>
    <string name="string_7f1101d7">Whats Web</string>
    <string name="string_7f1101d8">To avoid being banned,</string>
    <string name="string_7f1101d9">we recommend using Whats Web to make your account more secure</string>
</resources>