<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/id_7f090187" android:background="@drawable/drawable_7f0700f2" android:layout_width="310.0dip" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/string_7f11005c" />
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:layout_width="270.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/string_7f11005b" android:lineSpacingExtra="6.0dip" />
        <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/id_7f09013e" android:layout_width="264.0dip" android:layout_height="39.0dip" android:layout_marginTop="28.0dip" android:text="@string/string_7f1100c2" android:layout_above="@id/id_7f090112" android:textAllCaps="false" style="@style/style_7f1200ca" />
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/id_7f090112" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="24.0dip" android:text="@string/string_7f110095" />
    </LinearLayout>
</RelativeLayout>
