<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/id_7f09028a" android:background="@color/color_7f0500f1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="50.0dip" android:layout_above="@id/id_7f09040b" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/id_7f090178" android:background="@drawable/drawable_7f070144" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_marginBottom="20.0dip" />
        <TextView android:textSize="20.0sp" android:textColor="@color/color_7f050128" android:gravity="center" android:id="@id/id_7f090422" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_7f1100d5" />
    </LinearLayout>
    <TextView android:id="@id/id_7f09040b" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1" android:layout_centerInParent="true" />
    <Button android:textSize="18.0sp" android:gravity="center" android:id="@id/id_7f0900df" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="25.0dip" android:text="@string/string_7f110127" android:layout_above="@id/id_7f090413" style="@style/style_7f1200ca" />
    <TextView android:textSize="13.0sp" android:textColor="@color/color_7f050128" android:gravity="center" android:id="@id/id_7f090413" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/string_7f1101c9" android:layout_above="@id/id_7f0901a3" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/id_7f0901a3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="40.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="13.0sp" android:textColor="@color/color_7f050069" android:gravity="center" android:id="@id/id_7f09041b" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_7f11010e" />
        <TextView android:textSize="13.0sp" android:textColor="@color/color_7f050128" android:gravity="center" android:id="@id/id_7f090406" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_7f11005d" />
        <TextView android:textSize="13.0sp" android:textColor="@color/color_7f050069" android:gravity="center" android:id="@id/id_7f090421" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_7f11012f" />
    </LinearLayout>
</RelativeLayout>
