<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/color_7f05008e" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:id="@id/id_7f090258" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginTop="5.0dip">
        <TextView android:id="@id/id_7f090257" android:paddingLeft="15.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:drawableLeft="@drawable/drawable_7f07014a" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="22.0dip" android:textColor="@color/color_7f050069" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_7f1100ae" android:layout_centerInParent="true" />
    </RelativeLayout>
    <EditText android:textSize="14.0sp" android:textColor="@color/color_7f05012a" android:textColorHint="@color/color_7f050082" android:gravity="center|left|top" android:id="@id/id_7f090123" android:background="@color/color_7f05008c" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="160.0dip" android:layout_margin="15.0dip" android:layout_marginTop="35.0dip" android:hint="@string/string_7f1100b6" android:layout_below="@id/id_7f090258" android:inputType="textMultiLine" />
    <TextView android:textSize="14.0sp" android:textColor="@color/color_7f05005c" android:id="@id/id_7f09040f" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:text="@string/string_7f1100b0" android:maxLines="3" android:layout_below="@id/id_7f090123" />
    <EditText android:textSize="14.0sp" android:textColor="@color/color_7f05005c" android:textColorHint="@color/color_7f050082" android:gravity="center_vertical" android:id="@id/id_7f090124" android:background="@drawable/drawable_7f0700f1" android:paddingLeft="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="15.0dip" android:hint="@string/string_7f1100af" android:singleLine="true" android:layout_below="@id/id_7f09040f" android:inputType="text" android:paddingStart="10.0dip" />
    <Button android:textSize="17.0sp" android:textColor="@color/color_7f050128" android:id="@id/id_7f0900de" android:background="@drawable/drawable_7f0700ea" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="35.0dip" android:layout_marginRight="15.0dip" android:text="@string/string_7f1100b9" android:layout_below="@id/id_7f090124" android:textAllCaps="false" />
    <LinearLayout android:orientation="vertical" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:layout_below="@id/id_7f0900de">
        <TextView android:textSize="13.0sp" android:textColor="@color/color_7f05005e" android:gravity="start|center" android:id="@id/id_7f090414" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/string_7f1100b5" android:layout_weight="2.0" android:lineSpacingExtra="3.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/id_7f0901a8" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <ImageView android:id="@id/id_7f090172" android:background="@drawable/drawable_7f07015d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" />
        <TextView android:textSize="20.0sp" android:textColor="@color/color_7f050086" android:id="@id/id_7f09041d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_7f1100ba" />
    </LinearLayout>
</RelativeLayout>
