<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="center" android:background="@drawable/drawable_7f07011b" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/id_7f090194" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/id_7f09017b" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22.0dip" android:src="@drawable/drawable_7f07015c" android:layout_alignParentTop="true" android:layout_marginStart="16.0dip" android:layout_alignParentStart="true" />
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/color_7f05003b" android:id="@id/id_7f090422" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/string_7f1101d7" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
            <ImageView android:id="@id/id_7f090178" android:layout_width="54.0dip" android:layout_height="54.0dip" android:src="@drawable/drawable_7f07013e" android:scaleType="centerInside" android:layout_below="@id/id_7f090422" android:layout_centerHorizontal="true" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/drawable_7f07015b" android:layout_alignTop="@id/id_7f090178" android:layout_alignStart="@id/id_7f090178" />
        </RelativeLayout>
        <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/color_7f050057" android:id="@id/id_7f090423" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="17.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="17.0dip" android:text="@string/string_7f1101d8" android:layout_below="@id/id_7f090194" android:layout_centerHorizontal="true" android:lineSpacingExtra="5.0dip" android:layout_marginStart="17.0dip" android:layout_marginEnd="17.0dip" />
        <TextView android:textSize="15.0sp" android:textColor="#ff747474" android:gravity="center" android:id="@id/id_7f090424" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="17.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="17.0dip" android:text="@string/string_7f1101d9" android:layout_below="@id/id_7f090423" android:layout_centerHorizontal="true" android:lineSpacingExtra="5.0dip" android:layout_marginStart="17.0dip" android:layout_marginEnd="17.0dip" />
        <TextView android:textSize="18.0sp" android:textColor="@color/color_7f05005e" android:id="@id/id_7f09040a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/string_7f110111" android:layout_toLeftOf="@id/id_7f09040e" android:layout_below="@id/id_7f090424" android:layout_marginEnd="20.0dip" android:layout_toStartOf="@id/id_7f09040e" />
        <TextView android:textSize="18.0sp" android:textColor="@color/color_7f050069" android:id="@id/id_7f09040e" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginRight="17.0dip" android:layout_marginBottom="20.0dip" android:text="@string/string_7f110135" android:layout_below="@id/id_7f090424" android:layout_alignParentRight="true" android:layout_marginEnd="17.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
</FrameLayout>
