<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="center" android:background="@drawable/drawable_7f070120" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/id_7f090194" android:layout_width="fill_parent" android:layout_height="50.0dip">
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/color_7f05006c" android:id="@id/id_7f090422" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/string_7f1101d3" android:layout_centerInParent="true" />
            <ImageView android:id="@id/id_7f090173" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/drawable_7f070154" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <ImageView android:id="@id/id_7f090178" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:src="@drawable/drawable_7f070156" android:layout_below="@id/id_7f090194" android:layout_centerHorizontal="true" />
        <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@id/id_7f09018a" android:paddingLeft="23.0dip" android:paddingRight="23.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="20.0dip" android:layout_below="@id/id_7f090178">
            <ImageView android:background="@drawable/drawable_7f070158" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="15.0sp" android:textColor="@color/color_7f05006b" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:text="@string/string_7f1101d1" android:lineSpacingExtra="5.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@id/id_7f09018b" android:paddingLeft="23.0dip" android:paddingRight="23.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="20.0dip" android:layout_below="@id/id_7f09018a">
            <ImageView android:background="@drawable/drawable_7f070155" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="15.0sp" android:textColor="@color/color_7f05006b" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:text="@string/string_7f1101d0" android:lineSpacingExtra="5.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@id/id_7f09018c" android:paddingLeft="23.0dip" android:paddingRight="23.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="20.0dip" android:layout_below="@id/id_7f09018b">
            <ImageView android:background="@drawable/drawable_7f070157" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="15.0sp" android:textColor="@color/color_7f05006b" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:text="@string/string_7f1101cd" android:lineSpacingExtra="5.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@id/id_7f09018d" android:paddingLeft="23.0dip" android:paddingRight="23.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="20.0dip" android:layout_below="@id/id_7f09018c">
            <ImageView android:background="@drawable/drawable_7f070159" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="15.0sp" android:textColor="@color/color_7f05006b" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:text="@string/string_7f1101cf" android:lineSpacingExtra="5.0dip" />
        </LinearLayout>
        <Button android:textSize="18.0sp" android:id="@id/id_7f0900df" android:background="@drawable/drawable_7f07011f" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_7f060087" android:layout_marginLeft="23.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="23.0dip" android:layout_marginBottom="35.0dip" android:text="@string/string_7f1100bf" android:singleLine="true" android:layout_below="@id/id_7f09018d" android:layout_marginStart="23.0dip" android:layout_marginEnd="23.0dip" />
    </RelativeLayout>
</FrameLayout>
